# public/swagger.json
@@ -485,6 +485,55 @@
 					}
 				]
 			}
+		},
+		"/patients/medications": {
+			"post": {
+				"operationId": "CreateMedication",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/Medication"
+								}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"patientId": {
+										"type": "string"
+									},
+									"frequency": {
+										"type": "string"
+									},
+									"dosage": {
+										"type": "string"
+									},
+									"name": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"patientId",
+									"frequency",
+									"dosage",
+									"name"
+								],
+								"type": "object"
+							}
+						}
+					}
+				}
+			}
 		}
 	},
 	"servers": [
